--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 django-toolbelt==0.0.1
 gunicorn==19.3.0
-nose==1.3.4
 pycrypto==2.6.1
 requests==2.6.0
 virtualenv==12.0.7
-psycopg2 == 2.6
+psycopg2==2.6
+argparse==1.2.1
+wsgiref==0.1.2
+static3==0.5.1
